財務管理可正常使用，以及優化預約球場